# Bukhtagram-Client-Backend

./: CMakeLists.txt  main.cpp
Client/: CMakeLists.txt
Client/Controllers/: CMakeLists.txt
Client/Controllers/ClientController/include/: ClientController.hpp  IClientController.hpp
Client/Controllers/ClientController/src/: ClientController.cpp
Client/Models/: CMakeLists.txt
Client/Models/ClientModel/include/: ClientModel.hpp  IClientModel.hpp
Client/Models/ClientModel/src/: ClientModel.cpp
Client/Views/: CMakeLists.txt
Client/Views/ClientView/include/: ClientView.hpp
Client/Views/ClientView/src/: ClientView.cpp
